tests/behavior/success/global_variable1.bz
let v = 42;

function main()
{
	if (v != 42) unreachable;
}
