tests/behavior/error/trap.bz
function main()
{
	__builtin_trap();
}
